--- a/index.html
+++ b/index.html
@@ -5,9 +5,178 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fontawesome/css/all.css">
-    <title>Document</title>
+    <title>Grogin</title>
 </head>
 <body>
-    
+    <section id="notification">
+        <div class="notify">
+            <h6 class="h6">FREE delivery & 40% Discount for next 
+                3 orders! Place your 1st order in.</h6>
+            <span>
+                <h6 class="one">Until the end of the sale:</h6>
+                <div>
+                    <h5>47</h5>
+                    <h6>days</h6>
+                </div>
+                <div>
+                    <h5>06</h5>
+                    <h6>hours</h6>
+                </div>
+                <div>
+                    <h5>52</h5>
+                    <h6>minutes</h6>
+                </div>
+                <div>
+                    <h5>13</h5>
+                    <h6>sec.</h6>
+                </div>
+            </span>
+        </div>
+    </section>
+    <section id="head">
+        <section class="wrapper">
+            <header>
+                <div>
+                    <nav>
+                        <item>
+                            <a href="">
+                                <h5>About Us</h5>
+                            </a>
+                            <a href="">
+                                <h5>My account</h5>
+                            </a>
+                            <a href="">
+                                <h5>Wishlist</h5>
+                            </a>
+                        </item>
+                    </nav>
+                    <div class="hd-text">
+                        <h5>We deliver to you every day from <span>7:00 to 23:00</span></h5>
+                    </div>
+                </div>
+                <nav>
+                    <item>
+                        <a href="">
+                            <h5>English</h5>
+                            <i class="fa-solid fa-angle-down fa-xs"></i>
+                        </a>
+                        <a href="">
+                            <h5>USD</h5>
+                            <i class="fa-solid fa-angle-down fa-xs"></i>
+                        </a>
+                        <a href="">
+                            <h5>Order Tracking</h5>
+                        </a>
+                    </item>
+                </nav>
+            </header>
+        </section>
+    </section>
+    <section id="head2">
+        <section class="wrapper">
+            <header>
+                <div>
+                    <a href="">
+                        <img src="images/logo-dark.svg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <img src="images/location.svg" alt="">
+                    </a>
+                </div>
+                <div>
+                    <a href="">
+                        <h5 class="dt">Deliver to</h5>
+                        <h5 class="all">all</h5>
+                    </a>
+                </div>
+                <div class="hd2-div4">
+                    <form action="">
+                        <input type="text" placeholder="Search for products, categories or brands...">
+                        <a href="">
+                            <img src="images/search.svg" alt="">
+                        </a>
+                        
+                    </form>
+                </div>
+                <div class="hd2-div5">
+                    <a href="">
+                        <div class="icon-wrapper">
+                            <span class="badge">0</span>
+                            <img src="images/account-icon.svg" alt="">
+                        </div>
+                        <h5>Account</h5>
+                    </a>
+                    <a href="">
+                        <div class="icon-wrapper">
+                            <span class="badge">0</span>
+                            <img src="images/heart-icon.svg" alt="">
+                        </div>
+                        <h5>Wishlist</h5>
+                    </a>
+                    <a href="">
+                        <div class="icon-wrapper">
+                            <span class="badge">0</span>
+                            <img src="images/cart.svg" alt="">
+                        </div>
+                        <h5>Your Cart</h5>
+                    </a>
+                </div>
+            </header>
+        </section>
+    </section>
+    <section id="head3">
+        <section class="wrapper">
+            <header>
+                <div>
+                    <nav>
+                        <item class="spcl">
+                            <a href="#" class="nav-link active" onclick="setActive(this)">
+                                <h5>Home</h5>
+                                <i class="fa-solid fa-angle-down fa-xs"></i>
+                            </a>
+                            <a href="#" class="nav-link" onclick="setActive(this)">
+                                <h5>Shop</h5>
+                                <i class="fa-solid fa-angle-down fa-xs"></i>
+                            </a>
+                            <a href="#" class="nav-link" onclick="setActive(this)">
+                                <h5>Fruits & Vegetables</h5>
+                            </a>
+                            <a href="#" class="nav-link" onclick="setActive(this)">
+                                <h5>Beverages</h5>
+                            </a>
+                            <a href="#" class="nav-link" onclick="setActive(this)">
+                                <h5>Blog</h5>
+                            </a>
+                            <a href="#" class="nav-link" onclick="setActive(this)">
+                                <h5>Contact</h5>
+                            </a>
+                        </item>
+                    </nav>
+                </div>
+                <nav>
+                    <item>
+                        <a href="">
+                            <h5>Trending Products</h5>
+                            <i class="fa-solid fa-angle-down fa-xs"></i>
+                        </a>
+                        <a href="">
+                            <h5 class="red">Almost Finished</h5>
+                            <span>
+                                <h4>SALE</h4>
+                            </span>
+                            <i class="fa-solid fa-angle-down fa-xs"></i>
+                        </a>
+                    </item>
+                </nav>
+            </header>
+        </section>
+    </section>
+
+
+
+
+    <script src="script.js"></script>
 </body>
 </html>
